# projecto-final-nullptr

./: CMakeLists.txt  LICENSE  README.md  main.cpp
data/: stopwords_test.txt  training_words_esp.csv
include/utec/app/: app_manager.h
include/utec/data/: dataset_utils.h  text_loader.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
models/: model.txt  vocabulary.txt
src/utec/app/: app_manager.cpp
src/utec/data/: dataset_utils.cpp  text_loader.cpp
tests/: neural_network_test.cpp  stopwords_test.cpp  test_app_manager_load_ai.cpp  test_convergence_adam.cpp  test_tensor.cpp  text_loader_test.cpp
